# SGLibrary

./: .gitignore  CMakeLists.txt  README.md  SGLibrary.sln  UpgradeLog.htm  premake5.lua
SGLibrary/src/: SGL.cpp  SGL.h
SGLibrary/src/Platform/Linux/: LinuxButton.cpp  LinuxButton.h  LinuxInputField.cpp  LinuxInputField.h  LinuxLabel.cpp  LinuxLabel.h  LinuxWindow.cpp  LinuxWindow.h
SGLibrary/src/Platform/Windows/: WindowsButton.cpp  WindowsButton.h  WindowsInputField.cpp  WindowsInputField.h  WindowsLabel.cpp  WindowsLabel.h  WindowsWindow.cpp  WindowsWindow.h
SGLibrary/src/SGLibrary/: SGButton.cpp  SGButton.h  SGElement.cpp  SGElement.h  SGInputField.cpp  SGInputField.h  SGLabel.cpp  SGLabel.h  SGWindow.cpp  SGWindow.h
SGLibrary/src/window/: SGButton.cpp  SGButton.h  SGElement.cpp  SGElement.h  SGWindow.cpp  SGWindow.h
SGLibrary/src/window/linux/: button.cpp  button.h
SGLibrary/src/window/windows/: button.cpp  button.h  window.cpp  window.h
Sandbox/src/: main.cpp
sandbox/: CMakeLists.txt
sandbox/src/: SGL.cpp
src/: KeyCodes.h  main.cpp  main.h
src/window/: Window.cpp  Window.h
src/window/ui/: Button.cpp  Button.h  Image.h  InputField.cpp  InputField.h  TextLabel.cpp  TextLabel.h  UI.h
